# django-table-sharding

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
django_table_sharding/: apps.py  managers.py  utils.py
django_table_sharding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_table_sharding/management/commands/: migrate.py
