[metadata]
name = django-table-sharding
version = 0.4
description = A Django app to automatically handle sharding model tables in MySQL.
long_description = file: README.rst
url = https://github.com/rayhern/django-table-sharding
author = Raymond Hernandez
author_email = bizong@gmail.com
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = false
include_package_data = true
packages = django_table_sharding